--- a/第二章/ノック11-checkpoint.ipynb
+++ b/第二章/ノック11-checkpoint.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
        "4   栗田 憲一  くりた けんいち  E市  kurita_kenichi@example.com       43127"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,6 +197,70 @@
    "source": [
     "kokyaku_data = pd.read_excel(\"kokyaku_daicho.xlsx\")\n",
     "kokyaku_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ここから自身の解答"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データの揺れを確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      商品A\n",
+       "1    商 品 S\n",
+       "2    商 品 a\n",
+       "3      商品Z\n",
+       "4      商品a\n",
+       "Name: item_name, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uriage_data[\"item_name\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     100.0\n",
+       "1       NaN\n",
+       "2       NaN\n",
+       "3    2600.0\n",
+       "4       NaN\n",
+       "Name: item_price, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uriage_data[\"item_price\"].head()"
    ]
   },
   {
