--- a/第二章/ノック13-checkpoint.ipynb
+++ b/第二章/ノック13-checkpoint.ipynb
@@ -250,6 +250,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ここから自身の解答"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -277,6 +284,8 @@
     }
    ],
    "source": [
+    "# 購入月毎にまとめて列を追加\n",
+    "\n",
     "uriage_data[\"purchase_date\"] = pd.to_datetime(uriage_data[\"purchase_date\"])\n",
     "uriage_data[\"purchase_month\"] = uriage_data[\"purchase_date\"].dt.strftime(\"%Y%m\")\n",
     "uriage_data[\"purchase_month\"]"
@@ -380,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -549,19 +558,21 @@
        "[2999 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#\"item_name2\"として、\"item_name\"と全く同じ列を追加\n",
+    "\n",
     "uriage_data[\"item_name2\"] =uriage_data[\"item_name\"]\n",
     "uriage_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -830,18 +841,20 @@
        "[7 rows x 99 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 購入月毎にそれぞれの商品の売り上げ個数を集計(データの揺れを確認)\n",
+    "\n",
     "uriage_data.pivot_table(index = \"purchase_month\", columns = \"item_name\", values = \"item_name2\", aggfunc = \"count\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1120,12 +1133,14 @@
        "[7 rows x 99 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 購入月毎にそれぞれの商品の売り上げ金額を集計(データの揺れを確認)\n",
+    "\n",
     "uriage_data.pivot_table(index = \"purchase_month\", columns = \"item_name\", values = \"item_price\", aggfunc = \"sum\")"
    ]
   },
