--- a/第一章/ノック9-checkpoint.ipynb
+++ b/第一章/ノック9-checkpoint.ipynb
@@ -2535,6 +2535,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ここから自身の解答"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -2773,6 +2780,8 @@
     }
    ],
    "source": [
+    "#月別、商品別の売り上げ金額と個数の集計\n",
+    "\n",
     "join_data5 = join_data3.groupby([\"payment_month\",\"item_name\"]).sum()[[\"price\", \"quantity\"]]\n",
     "join_data5"
    ]
@@ -2947,6 +2956,8 @@
     }
    ],
    "source": [
+    "# 商品をindex、月をcolumnにピボット\n",
+    "\n",
     "pd.pivot_table(join_data5,index = \"item_name\", columns = \"payment_month\")"
    ]
   },
