--- a/第一章/ノック7-checkpoint.ipynb
+++ b/第一章/ノック7-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +92,7 @@
        "4    T0000000117  170000  2019-02-01 04:33:46    PL542865"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4    T0000005117  120000  2019-06-15 08:44:23    TS506913"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[6786 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "4          4    T0000000117    S002         2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "4       5004    T0000004874    S003         2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "[7144 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "[7144 rows x 6 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "4    S005      PC-E      210000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "4   oouchi_takashi@example.com      M   54   1965/8/5  千葉県  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
        "[7144 rows x 14 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1656,7 +1656,7 @@
        "[7144 rows x 16 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1788,7 +1788,7 @@
        "[7144 rows x 3 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1811,7 @@
        "971135000"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "971135000"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,8 +1841,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ここから自身の解答"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1864,11 +1871,10 @@
        "pref                  0\n",
        "item_name             0\n",
        "item_price            0\n",
-       "price                 0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1907,13 +1913,11 @@
        "      <th>quantity</th>\n",
        "      <th>age</th>\n",
        "      <th>item_price</th>\n",
-       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>7144.000000</td>\n",
        "      <td>7144.000000</td>\n",
        "      <td>7144.000000</td>\n",
        "      <td>7144.000000</td>\n",
@@ -1925,7 +1929,6 @@
        "      <td>1.199888</td>\n",
        "      <td>50.265677</td>\n",
        "      <td>121698.628219</td>\n",
-       "      <td>135937.150056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -1933,14 +1936,12 @@
        "      <td>0.513647</td>\n",
        "      <td>17.190314</td>\n",
        "      <td>64571.311830</td>\n",
-       "      <td>68511.453297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>20.000000</td>\n",
-       "      <td>50000.000000</td>\n",
        "      <td>50000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1949,7 +1950,6 @@
        "      <td>1.000000</td>\n",
        "      <td>36.000000</td>\n",
        "      <td>50000.000000</td>\n",
-       "      <td>85000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1957,7 +1957,6 @@
        "      <td>1.000000</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>102500.000000</td>\n",
-       "      <td>120000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1965,7 +1964,6 @@
        "      <td>1.000000</td>\n",
        "      <td>65.000000</td>\n",
        "      <td>187500.000000</td>\n",
-       "      <td>210000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1973,25 +1971,24 @@
        "      <td>4.000000</td>\n",
        "      <td>80.000000</td>\n",
        "      <td>210000.000000</td>\n",
-       "      <td>420000.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         detail_id     quantity          age     item_price          price\n",
-       "count  7144.000000  7144.000000  7144.000000    7144.000000    7144.000000\n",
-       "mean   3571.500000     1.199888    50.265677  121698.628219  135937.150056\n",
-       "std    2062.439494     0.513647    17.190314   64571.311830   68511.453297\n",
-       "min       0.000000     1.000000    20.000000   50000.000000   50000.000000\n",
-       "25%    1785.750000     1.000000    36.000000   50000.000000   85000.000000\n",
-       "50%    3571.500000     1.000000    50.000000  102500.000000  120000.000000\n",
-       "75%    5357.250000     1.000000    65.000000  187500.000000  210000.000000\n",
-       "max    7143.000000     4.000000    80.000000  210000.000000  420000.000000"
+       "         detail_id     quantity          age     item_price\n",
+       "count  7144.000000  7144.000000  7144.000000    7144.000000\n",
+       "mean   3571.500000     1.199888    50.265677  121698.628219\n",
+       "std    2062.439494     0.513647    17.190314   64571.311830\n",
+       "min       0.000000     1.000000    20.000000   50000.000000\n",
+       "25%    1785.750000     1.000000    36.000000   50000.000000\n",
+       "50%    3571.500000     1.000000    50.000000  102500.000000\n",
+       "75%    5357.250000     1.000000    65.000000  187500.000000\n",
+       "max    7143.000000     4.000000    80.000000  210000.000000"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
