--- a/第二章/ノック16.ipynb
+++ b/第二章/ノック16.ipynb
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
        "False"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,12 +1599,12 @@
    "source": [
     "# それぞれのDFに空白が含まれていないか確認\n",
     "\n",
-    "\" \" in uriage_data[\"customer_name\"]"
+    "uriage_data[\"customer_name\"].str.contains(\" \").any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1613,18 +1613,18 @@
        "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"　\" in uriage_data[\"customer_name\"]"
+    "uriage_data[\"customer_name\"].str.contains(\"  \").any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1633,18 +1633,18 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\" \" in kokyaku_data[\"顧客名\"]"
+    "kokyaku_data[\"顧客名\"].str.contains(\" \").any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1653,13 +1653,13 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\" \" in kokyaku_data[\"顧客名\"]"
+    "kokyaku_data[\"顧客名\"].str.contains(\"  \").any()"
    ]
   },
   {
