--- a/第三章/ノック27.ipynb
+++ b/第三章/ノック27.ipynb
@@ -3429,6 +3429,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "end_dateだけにしか欠損値が含まれていないので、うまく結合されている事が確認できた。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
